UX: Fix mobile spacing for chat elements
Minor changes, see before/after.

--- a/plugins/chat/assets/stylesheets/mobile/chat-channel-row.scss
+++ b/plugins/chat/assets/stylesheets/mobile/chat-channel-row.scss
@@ -24,7 +24,6 @@
   }
 
   &__content {
-    padding-inline: 1.5rem;
     padding-block: 0.5rem;
     z-index: 2;
     box-sizing: border-box;
